--- a/templates/to_see.html
+++ b/templates/to_see.html
@@ -9,10 +9,10 @@
 <body>
     <ul>
         <li>
-            <a href="./seen.html">Seen Movies</a>
+            <a href="./seen">Seen Movies</a>
         </li>
         <li>
-            <a href="./to_see.html">Movies to see</a>
+            <a href="./tosee">Movies to see</a>
         </li>
     </ul>
     <h1>Movies that i have to seen</h1>
@@ -22,7 +22,7 @@
         <input type="text" name="movie">
     </form>
     <ul>
-        <li>{{.name}}</li>
+        
     </ul>
 </body>
 </html>
