--- a/css/to_see.css
+++ b/css/to_see.css
@@ -1,11 +1,16 @@
+
+
 body {
-    width: 70%;
+    width: 60%;
     position:absolute;
     left: 20%;
     text-align: center;
     padding: 10px;
     margin: 10px;
-    
+    background-color:rgb(171, 223, 224);
+    border: 5px solid rgb(94, 94, 226);
+    border-radius:10px;
+    color: rgb(5, 114, 105);
 
 }
 
@@ -13,42 +18,58 @@ body {
     display: flex;
     flex-direction: row;
     justify-content:space-around;
-
-    
     list-style: none;
     font-size: large;
+    padding: 0;
 }
 
 #topBar li a  {
     text-decoration: none;
     color:white;
-    border-radius: 3px;
-    background-color:black;
+    background-color:rgb(61, 180, 228);
+    padding: 10px;
+    border-radius: 10px;
 }
 
 #topBar li a:hover  {
-    text-decoration: none;
-    color:white;
-    background-color:black;
-    border-radius: 3px;
+
+    color:black;
+    background-color:whitesmoke;
+    
 
 }
 
 
 
 #movieAdder {
-    width: 90%;
-    border: 1px solid black;
+    color: white;
+
+    border: 2px solid rgb(81, 81, 194);
     border-radius: 10px;
-    background-color:rgb(78, 78, 218);
+    background-color:rgb(132, 132, 226);
 }
 
 #movieSeen {
-    display: flex;
-    flex-direction: row;
-    justify-content:stretch;
-    width: 90%;
-    border: 1px solid black;
+    border: 2px solid rgb(81, 81, 194);
     border-radius: 10px;
-    background-color:rgb(78, 78, 218);
+    background-color:rgb(132, 132, 226);
+
 }
+
+#mId {
+    display: grid;
+    grid-template-columns: repeat(4, 18%);
+    grid-template-rows: 1fr;
+
+}
+
+#dropDownSeen {
+    text-align: center;
+    grid-column: 1/4;
+}
+
+#submitBtn {
+
+    grid-column:5/6
+}
+
