--- a/templates/seen.html
+++ b/templates/seen.html
@@ -4,21 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/seen.css">
     <title>Seen</title>
 </head>
 <body>
     <ul>
-        <li>
-            <a href="./seen">Seen Movies</a>
-        </li>
-        <li>
-            <a href="./tosee">Movies to see</a>
-        </li>
+        <ul id="topBar">
+            <li>
+                <a href="./seen">Seen Movies</a>
+            </li>
+            <li>
+                <a href="./tosee">Movies to see</a>
+            </li>
+        </ul>
     </ul>
-    <h1>Movies i have seen</h1>
+    <h1>Movies I have seen</h1>
     {{ range .}}
-    <div>
-        -> {{ . }}
+    <div id="movie">
+         {{ . }}
     </div>
     {{ end }}
 </body>
